# advance_wars

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.xml  level-spezifikation.md  writelevel.cpp
XML/: unitXML.txt  unitXML_test.txt
documentation/: LevelEditor.md
leveleditor/: CMakeLists.txt
leveleditor/src/: MainWindow.cpp  SpriteProvider.cpp  SpriteProvider.hpp  Tile.cpp  Tile.hpp  TileProvider.cpp  TileProvider.hpp  main.cpp
res/: level.h5  map_split_island.hdf5  spritesheet.h5  weapon.xml
src/: building.cpp  building.hpp  common.h  config.cpp  config.hpp  effect.cpp  effect.hpp  engine.cpp  engine.hpp  level.cpp  level.hpp  main.cpp  scene.hpp  spritesheet.cpp  spritesheet.hpp  tile.cpp  tile.hpp  unit.cpp  unit.hpp  weapon.cpp  weapon.hpp  window.cpp  window.hpp
src/editor/: AdvancedPlacementSwitch.cpp  AdvancedPlacementSwitch.hpp  AutomateButton.cpp  AutomateButton.hpp  EventBroker.cpp  EventBroker.hpp  EventHandler.cpp  EventHandler.hpp  LevelNameEdit.cpp  LevelNameEdit.hpp  LevelScene.cpp  LevelScene.hpp  LevelTitle.cpp  LevelTitle.hpp  LevelView.cpp  LevelView.hpp  MainWindow.cpp  MainWindow.hpp  SaveButton.cpp  SaveButton.hpp  SpriteProvider.cpp  SpriteProvider.hpp  Tile.cpp  Tile.hpp  TileButton.cpp  TileButton.hpp  TileSelector.cpp  TileSelector.hpp  TopBar.cpp  TopBar.hpp  ZoomInButton.cpp  ZoomInButton.hpp  ZoomInfo.cpp  ZoomInfo.hpp  ZoomOutButton.cpp  ZoomOutButton.hpp  main.cpp
src/game/: Box2dHelper.hpp  Building.cpp  Building.hpp  Bullet.cpp  Bullet.hpp  Config.cpp  Config.hpp  Effect.cpp  Effect.hpp  Engine.cpp  Engine.hpp  Font.cpp  Font.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  Scene.hpp  Spritesheet.cpp  Spritesheet.hpp  Tile.cpp  Tile.hpp  Unit.cpp  Unit.hpp  UnitContactListener.cpp  UnitContactListener.hpp  Weapon.cpp  Window.cpp  Window.hpp  building.cpp  building.hpp  config.cpp  config.hpp  effect.cpp  engine.cpp  engine.hpp  level.cpp  main.cpp  scene.hpp  spritesheet.cpp  (+7 more)
src/game/combat/: Weapon.cpp  Weapon.hpp
src/game/core/: Config.cpp  Config.hpp  Engine.cpp  Engine.hpp  Scene.hpp  Spritesheet.cpp  Spritesheet.hpp  Tile.cpp  Tile.hpp  Window.cpp
src/game/effect/: Effect.cpp  Effect.hpp
src/game/entities/: Building.cpp  Building.hpp  Unit.cpp  Unit.hpp
src/game/level/: Level.cpp  Level.hpp
src/game/player/: Player.hpp
src/game/ui/: ContextMenu.cpp  ContextMenu.hpp  Contextmenu.cpp  Contextmenu.hpp  EndScreen.cpp  EndScreen.hpp  Endscreen.cpp  Endscreen.hpp  HelpMenu.cpp  HelpMenu.hpp  Helpmenu.cpp  Helpmenu.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp  Pausemenu.cpp  Pausemenu.hpp  RecruitingMenu.cpp  RecruitingMenu.hpp  Recruitingmenu.cpp  Recruitingmenu.hpp  TileMarker.cpp  TileMarker.hpp  UnitInfoMenu.cpp  UnitInfoMenu.hpp  contextmenu.cpp  contextmenu.hpp  menu.cpp  menu.hpp  pausemenu.cpp  pausemenu.hpp
src/game/ui/context/: ContextMenu.cpp  ContextMenu.hpp  RecruitingMenu.cpp  RecruitingMenu.hpp
src/game/ui/menu/: EndScreen.cpp  EndScreen.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp
src/game/ui/modals/: HelpMenu.cpp  HelpMenu.hpp  UnitInfoMenu.cpp  UnitInfoMenu.hpp
src/ui/: ContextMenu.cpp  ContextMenu.hpp  Menu.cpp  Menu.hpp  contextmenu.cpp  contextmenu.hpp  menu.cpp  menu.hpp  pausemenu.cpp  pausemenu.hpp
src/util/: writelevel.cpp
xml/: config.xml
